change chart type on click an a button

--- a/Change-Chart-Type/index.html
+++ b/Change-Chart-Type/index.html
@@ -14,18 +14,30 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>ChartJS</title>
+    <title>Change chart dynamicaly from the button</title>
   </head>
   <body class="bg-success">
     <div class="col-8 offset-2 my-5">
       <div class="card">
         <div class="card-body">
-          <h1>ChartJS Tutorial Series - Basics</h1>
+          <h1>
+            ChartJS Tutorial Series - Change chart dynamicaly from the button
+          </h1>
           <hr />
           <div class="canvas">
             <canvas id="myChart"></canvas>
           </div>
         </div>
+      </div>
+      <div class="buttons">
+        <button class="btn btn-line" id="line">Line Chart</button>
+        <button class="btn btn-bar" id="bar">Bar Chart</button>
+        <button class="btn btn-radar" id="radar">Radar Chart</button>
+        <button class="btn btn-doughnut" id="doughnut">Doughnut Chart</button>
+        <button class="btn btn-pie" id="pie">Pie Chart</button>
+        <button class="btn btn-polar" id="polar">Polar Chart</button>
+        <button class="btn btn-bubble" id="bubble">Bubble Chart</button>
+        <button class="btn btn-scatter" id="scatter">Scatter Chart</button>
       </div>
     </div>
 
