basic functionality for adjusting the legend

--- a/Legend/index.html
+++ b/Legend/index.html
@@ -14,13 +14,13 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>ChartJS - Basics</title>
+    <title>ChartJS - Legend</title>
   </head>
   <body class="bg-success">
     <div class="col-8 offset-2 my-5">
       <div class="card">
         <div class="card-body">
-          <h1>ChartJS Tutorial Series - Basics</h1>
+          <h1>ChartJS Tutorial Series - Legend</h1>
           <hr />
           <div class="canvas">
             <canvas id="myChart"></canvas>
