--- a/Table-Data-Advanced/index.html
+++ b/Table-Data-Advanced/index.html
@@ -14,29 +14,46 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>ChartJS - Table data</title>
+    <title>ChartJS - Table data advanced</title>
   </head>
   <body class="bg-success">
     <div class="col-8 offset-2 my-5">
       <div class="card">
         <div class="card-body">
-          <h1>ChartJS Tutorial Series - Table data</h1>
+          <h1>ChartJS - Table data advanced</h1>
           <br />
+          <button id="build-chart">Build chart</button>
           <hr />
-          <div class="canvas">
-            <canvas id="myChart"></canvas>
-          </div>
+          <div class="canvas"></div>
         </div>
       </div>
       <br />
-      <table id="table-data" class="table">
+      <!-- <table id="table-data" class="table">
         <thead>
           <tr>
             <td>Labels</td>
             <td>Data</td>
           </tr>
         </thead>
-      </table>
+      </table> -->
+      <h2>Create table manually</h2>
+      <div class="table-structure">
+        <label for="rows">Rows</label>
+        <input type="number" name="rows" id="rows" />
+      </div>
+      <div class="table-structure">
+        <label for="columns">Columns</label>
+        <input type="number" name="columns" id="columns" />
+      </div>
+      <button id="create-table">Create table</button>
+      <div
+        class="table-div"
+        style="margin-top: 30px; margin-bottom: 30px"
+      ></div>
+      <div style="margin-top: 50px">
+        <input type="file" name="upload" id="upload" />
+        <button id="upload-csv">Upload CSV</button>
+      </div>
     </div>
 
     <script
